@@ -4,7 +4,6 @@ import java.lang.reflect.Field;
 import java.util.Collection;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import io.github.edmm.core.parser.Entity;
@@ -20,7 +19,6 @@ import io.github.edmm.model.relation.DependsOn;
 import io.github.edmm.model.relation.RootRelation;
 import io.github.edmm.model.support.Attribute;
 import io.github.edmm.model.support.ModelEntity;
-import org.iac2.service.architecturereconstruction.common.model.EdmmTypes.DockerEngine;
 
 public class Edmm {
 
@@ -129,6 +127,7 @@ public class Edmm {
 
     public static void addPropertyAssignments(EntityGraph graph, EntityId componentId, Map<String, Object> attributeAssignments) {
         final Entity propertiesEntity = ensurePropertiesEntityExists(graph, componentId);
+
         addPropertyAssignments(propertiesEntity, attributeAssignments);
     }
 
@@ -142,9 +141,27 @@ public class Edmm {
         return ((ScalarEntity) graph.getEntity(componentTypeId).orElseThrow()).getValue();
     }
 
-    // todo make a generic method based on the component class type (not a specific property name)
-    public static Collection<RootComponent> getDockerEngineComponents(DeploymentModel deploymentModel) {
-        return deploymentModel.getComponents().stream().filter(c -> c instanceof DockerEngine).collect(Collectors.toList());
+    public static <T extends RootComponent> Collection<T> getAllComponentsOfType(DeploymentModel deploymentModel, Class<T> type) {
+        return deploymentModel.getComponents()
+                .stream()
+                .filter(c -> c.getClass().equals(type))
+                .map(c -> (T) c)
+                .toList();
+    }
+
+    public static Collection<RootComponent> findDependentComponents(DeploymentModel model,
+                                                                    RootComponent targetComponent,
+                                                                    Class<? extends DependsOn> relationType) {
+        Collection<EntityId> hostedOnEngineRelIds = model.getRelations()
+                .stream()
+                .filter(r -> relationType.isAssignableFrom(r.getClass()) && r.getTarget().equals(targetComponent.getId()))
+                .map(r -> r.getEntity().getId())
+                .toList();
+        // next, we find the sources of these relations
+        return model.getComponents()
+                .stream()
+                .filter(c -> c.getRelations().stream().anyMatch(r -> hostedOnEngineRelIds.contains(r.getEntity().getId())))
+                .toList();
     }
 
     private static void addPropertyDefinition(Attribute<?> attribute, Entity propertiesEntity) {
@@ -183,20 +200,41 @@ public class Edmm {
         });
     }
 
+    /***
+     * Adds a property to a type or a property assignment to a component. In the latter case, if the component already has
+     * the property, its value is replaced with the new value. If the property being assigned to does not exist in the type
+     * definition, it is also added there.
+     * @param propertiesEntity the entity that holds the list of properties within the current type/component entity.
+     * @param propertyType the type of the property
+     * @param propertyName the name of the property
+     * @param isAssignment indicates whether this is an assignment or a property definition
+     * @param value if assignment, holds the value to be assigned.
+     */
     private static void addProperty(Entity propertiesEntity, String propertyType, String propertyName, boolean isAssignment, String value) {
         final EntityGraph graph = propertiesEntity.getGraph();
         final EntityId propertiesId = propertiesEntity.getId();
         EntityId propertyId = propertiesId.extend(propertyName);
-        MappingEntity normalizedEntity = new MappingEntity(propertyId, graph);
-        ScalarEntity typeEntity = new ScalarEntity(propertyType, normalizedEntity.getId().extend(DefaultKeys.TYPE), graph);
-        graph.addEntity(normalizedEntity);
-        graph.addEntity(typeEntity);
+        MappingEntity normalizedEntity;
+        boolean propertyExists = graph.getEntity(propertyId).isPresent();
+
+        if (!propertyExists) {
+            normalizedEntity = new MappingEntity(propertyId, graph);
+            ScalarEntity typeEntity = new ScalarEntity(propertyType, normalizedEntity.getId().extend(DefaultKeys.TYPE), graph);
+            graph.addEntity(normalizedEntity);
+            graph.addEntity(typeEntity);
+        } else {
+            normalizedEntity = (MappingEntity) graph.getEntity(propertyId).get();
+        }
 
         if (isAssignment) {
             ScalarEntity valueEntity = new ScalarEntity(value, normalizedEntity.getId().extend(DefaultKeys.VALUE), graph);
-            graph.addEntity(valueEntity);
-            ScalarEntity computedEntity = new ScalarEntity("true", normalizedEntity.getId().extend(DefaultKeys.COMPUTED), graph);
-            graph.addEntity(computedEntity);
+            if (propertyExists) {
+                graph.replaceEntity(graph.getEntity(valueEntity.getId()).orElseThrow(), valueEntity);
+            } else {
+                graph.addEntity(valueEntity);
+                ScalarEntity computedEntity = new ScalarEntity("true", normalizedEntity.getId().extend(DefaultKeys.COMPUTED), graph);
+                graph.addEntity(computedEntity);
+            }
 
             final EntityId componentId = propertiesEntity.getParent().orElseThrow().getId();
 
@@ -204,7 +242,8 @@ public class Edmm {
                 final String componentType = getComponentType(graph, componentId);
                 final Entity propertyDefinitionsEntity = ensurePropertiesEntityExists(graph, EntityGraph
                         .COMPONENT_TYPES
-                        .extend(componentType));
+                        .extend(componentType)
+                        .extend(DefaultKeys.PROPERTIES));
                 addProperty(propertyDefinitionsEntity, propertyType, propertyName, false, null);
             }
         }
